# JunctionHackathon

./: .gitignore  README.md  UsefulResources.md  __init__.py  build_emerald_qubit_rotated.py  claim_inventory.md  claim_to_source_mapping.md  extract_syndromes.py  internal_helpers.py  main.py  open_gaps_and_risks.md  opencode.json  pyproject.toml  requirements.txt  run_on_hardware.py  source_audit_table.md  surface_code.py  surface_code_stim.py
.opencode/agent/: lumi-reference.md  lumi-slurm-reviewer.md  lumi-tooling.md
diffqec/: ARCHITECTURE.md  README.md  __init__.py  data.py  decoder.py  denoiser.py  diffusion.py  integrate.py  model.py  smoke_test.py  syndrome_processor.py  training.py
docs/lumi/: README.md  deployment.md  preflight.md
iqm_utils/: GarnetRepetitionCode.ipynb  get_calibration_data.py  surfaceLattice.py
lumi_deployment/: README.md  diffqec_smoke.sbatch  env.example  hello_smoke.sbatch  setup_lumi_env.sh
tests/: test_diffqec.py
